<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddCarFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="174dp"
            android:layout_height="21dp"
            android:layout_marginTop="12dp"
            android:text="@string/codigo"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout1" />

        <TextView
            android:id="@+id/textMyorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="36dp"
            android:text="@string/caradd"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="326dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:hint="@string/carnamehint" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="28dp"
            android:text="@string/carname"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textMyorder" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="174dp"
            android:layout_height="21dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:text="@string/carnum"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="134dp"
            android:layout_height="30dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="10dp"
            android:text="@string/vencimientoTEXT"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout1" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="102dp"
            android:layout_height="25dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="10dp"
            android:text="@string/vencimientoTEXT"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="326dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:hint="@string/number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"

            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/vencimiento" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="66dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textView15">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/cvv" />
            </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:layout_marginTop="64dp"
            android:text="@string/addButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>